Fixed page overflow

--- a/src/assets/sass/partials/_global.scss
+++ b/src/assets/sass/partials/_global.scss
@@ -36,8 +36,9 @@ footer {
 
 main.page-content {
 	position: relative;
-	width: 100%;
-	// height: 100%;
+	width: 100%; // height: 100%;
+	height: calc(100% - 70px);
+	margin-top: -20px; // overflow: auto;
 	@extend .grow;
 }
 
